Changed px to rem (responsiveness). Changed "Analytics" to "Statistics" to match filename. Fixed text in index not showing up bug (changed z-index).

--- a/Code/UserInterface/stylesheet.css
+++ b/Code/UserInterface/stylesheet.css
@@ -4,7 +4,7 @@ html{
 }
 
 div{
-    padding: 70px 0;
+    padding: 4.375rem 0;
     text-align: center;
 }
 
@@ -13,8 +13,8 @@ div{
 }
 
 .text{
-    text-indent: 50px;
-  letter-spacing: 3px;
+    text-indent: 3.125rem;
+  letter-spacing: 0.1875rem
 }
 
 .input{
@@ -44,13 +44,13 @@ hr{
   }
 
   .button{
-    border: 2px solid #e7e7e7;
-    padding: 16px 32px;
+    border: 0.125rem solid #e7e7e7;
+    padding: 1rem 2rem;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: 1rem;
+    margin: 0.25rem 0.125rem;
     border-radius:1%;
   }
   
@@ -66,9 +66,10 @@ i:hover{color:#A9A9A9;}
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 200px;
+    height: 12.5rem;
     width: 100%;
     overflow: hidden;
+    z-index:-1;
 }
 
 
@@ -99,14 +100,14 @@ i:hover{color:#A9A9A9;}
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  min-width: 10rem;
+  box-shadow: 0rem 0.5rem 1rem 0rem rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropDownContent a {
   color: black;
-  padding: 12px 16px;
+  padding: 0.75rem 1rem;
   text-decoration: none;
   display: block;
 }
